
tkfilebrowser - Alternative to filedialog for Tkinter
=====================================================
Copyright 2017 Juliette Monsel <j_4321@protonmail.com>

Changelog
---------

- tkfilebrowser 2.2.3
    * Fix FileNotFoundError if initialdir does not exist

- tkfilebrowser 2.2.2
    * Fix ValueError in after_cancel with Python 3.6.5

- tkfilebrowser 2.2.1
    * Fix __main__.py for python 2

- tkfilebrowser 2.2.0
    * Use babel instead of locale in order not to change the locale globally
    * Speed up (a little) folder content display
    * Improve example: add comparison with default dialogs
    * Add select all on Ctrl+A if multiple selection is enabled
    * Disable folder creation button if the user does not have write access
    * Improve extension management in save mode

- tkfilebrowser 2.1.1
    * Fix error if LOCAL_PATH does not exists or is not writtable

- tkfilebrowser 2.1.0
    * Add compatibility with tkinter.filedialog keywords 'master' and 'defaultextension'
    * Change look of filetype selector
    * Fix bugs when navigating without displaying hidden files
    * Fix color alternance bug when hiding hidden files
    * Fix setup.py
    * Hide suggestion drop-down when nothing matches anymore

- tkfilebrowser 2.0.0
    * Change package name to tkfilebrowser to respect PEP 8
    * Display error message when an issue occurs during folder creation
    * Cycle only through folders with key browsing in "opendir" mode
    * Complete only with folder names in "opendir" mode
    * Fix bug: grey/white color alternance not always respected
    * Add __main__.py with an example
    * Add "Recent files" shortcut
    * Make the text of the validate and cancel buttons customizable
    * Add possibility to disable new folder creation
    * Add python 2 support
    * Add horizontal scrollbar

- tkFileBrowser 1.1.2
    * Add tooltips to display the full path of the shortcut if the mouse stays
      long enough over it.