@@ -117,6 +117,7 @@ Changelog
 
 - tkfilebrowser 2.2.3
     * Fix FileNotFoundError if initialdir does not exist
+    * Add Desktop in shortcuts (if found)
 
 - tkfilebrowser 2.2.2
     * Fix ValueError in after_cancel with Python 3.6.5
